[metadata]
name = flaskr
author = Jeremiasz Macura
author-email = jeremiaszmacura99@gmail.com
summary = Sample web application using Flask
description-file = README.md
home-page = https://github.com/Jeremiaszmacura/hospital-rooms-management-system
requires-dist = setuptools
classifier =
    Development Status :: 3 - Alpha
    Intended Audience :: Education
    Operating System :: OS Independent
    Programming Language :: Python
    Framework :: Flask
    Topic :: Office/Business

[options]
packages = find:
install_requires = 
    flask
    flask_sqlalchemy
    psycopg2-binary
    python-dotenv
setup_requires =
    pytest-runner
    wheel
tests_requires =
    pytest
    pylint
    black

[options.extras_require]
dev =
    pytest
    pylint
    black
    wheel
test =
    pytest

[options.packages.find]
exclude = tests

[aliases]
test=pytest